--- a/_config.yml
+++ b/_config.yml
@@ -346,7 +346,7 @@ post_copyright:
 #   image: url-of-image   - Images's url
 custom_logo:
   enabled: true
-  image: assets/images/milk.png
+  image: /assets/images/milk.png
 
 
 # Code Highlight theme
