--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # ---------------------------------------------------------------
 
 # Site
-title: GO GET GO!
+title: e40f GO GET GO!
 subtitle: Learnin Go with Milk
 description:
 author: Milk
