--- a/_config.yml
+++ b/_config.yml
@@ -193,7 +193,7 @@ font:
   # The `size` option use `px` as unit
   logo:
     external: true
-    family:
+    family: fontawesome
     size:
 
   # Font settings for <code> and code blocks.
