--- a/_config.yml
+++ b/_config.yml
@@ -193,7 +193,7 @@ font:
   # The `size` option use `px` as unit
   logo:
     external: true
-    family: FontaAesome
+    family: 
     size:
 
   # Font settings for <code> and code blocks.
@@ -345,7 +345,7 @@ post_copyright:
 #   enabled: [true/false] - Replace with specific image
 #   image: url-of-image   - Images's url
 custom_logo:
-  enabled: true
+  enabled: [true]
   image: /assets/images/milk.png
 
 
