--- a/_config.yml
+++ b/_config.yml
@@ -345,7 +345,7 @@ post_copyright:
 #   enabled: [true/false] - Replace with specific image
 #   image: url-of-image   - Images's url
 custom_logo:
-  enabled: true
+  enabled: fals
   image: /assets/images/milk.png
 
 
